deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookly-web
  namespace: bookly
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: bookly-web
  template:
    metadata:
      labels:
        app: bookly-web
    spec:
      containers:
        - name: bookly-web
          image: bojananaumovska/bookly-mono:latest
          ports:
            - containerPort: 8080
