mssql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mssql
  namespace: bookly
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssql-storage
              mountPath: /var/opt/mssql
  volumeClaimTemplates:
    - metadata:
        name: mssql-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
