service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookly-service
  namespace: bookly
spec:
  selector:
    app: bookly-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
