ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookly-ingress
  namespace: bookly
spec:
  rules:
    - host: bookly.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookly-service
                port:
                  number: 80
